cmake_minimum_required(VERSION 3.5)

set(TARGET_NAME ${PROJECT_NAME})

file(GLOB_RECURSE HEADER_FILES "*.h")
file(GLOB_RECURSE SOURCE_FILES "*.cpp")

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO")
set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO" )
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO" )

set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO")
set(CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL "${CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO" )
set(CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL "${CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL} /SUBSYSTEM:console /ENTRY:mainCRTStartup /MANIFEST:NO" )

add_executable(${TARGET_NAME} WIN32)

target_sources(${TARGET_NAME} PRIVATE ${HEADER_FILES} ${SOURCE_FILES})

target_link_libraries(${TARGET_NAME} PRIVATE
    minitor)
